--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <nav class="navBar">
             <h3 class="navBar_alias">MSCH13</h3>
             <ul class="navBar_items">
-                <a href=""><li>Home</li></a>
-                <a href=""><li>About</li></a>
-                <a href=""><li>Projects</li></a>
-                <a href=""><li>Contact</li></a>
+                <a href="#home"><li>Home</li></a>
+                <a href="#about"><li>About</li></a>
+                <a href="#projects"><li>Projects</li></a>
+                <a href="#contact"><li>Contact</li></a>
             </ul>
             <div class="navBar_darkMode">
                 <span>
@@ -34,34 +34,49 @@
     <!-- BODY OF THE PAGE -->
     <main>
         <!-- HOME -->
-        <section id="#home" class="whoIam">
+        <section id="home" class="whoIam">
             <div class="whoIam_description">
-                <h2 class="whoIam_description-greeting">Hola!!</h2>
-                <h1 >Soy Marcos Chinchilla</h1>
+                <h2 class="whoIam_description-greeting">Hola mundo!! Soy</h2>
+                <h1 >Marcos Chinchilla</h1>
                 <p class="whoIam_description-job">Desarrollador web Frontend</p>
+                <a href="./asset/Marcos_Chinchilla.pdf" download>Descargar mi currículum</a>
             </div>
             <div class="whoIam_image">
                 <img src="./asset/images/msch.png"/>
             </div>
+            
         </section>
-        <section id="#about">
-            <h1>About me</h1>
-            <article>
+
+        <section id="about" class="about">
+            <h2>About me</h2>
+            <article class="about_whoiam">
                 <h3>¿Quien soy?</h3>
                 <p>
-
+                    ¡Hola! Mi nombre es Marcos Chinchilla, pero me conocen en las redes sociales como "MSCH13". Soy un desarrollador frontend apasionado por crear software para la web y por todas las posibilidades que este campo nos ofrece. Me especializo en convertir tareas complejas en soluciones simples y efectivas, y me encanta utilizar mis habilidades para ayudar a las personas a simplificar sus estilos de vida y su trabajo.
+                    <br/>
+                    Siempre estoy buscando nuevas oportunidades para seguir aprendiendo y creciendo como desarrollador, y me encantaría tener la oportunidad de trabajar contigo. ¡Gracias por visitar mi portafolio y espero tener la oportunidad de colaborar contigo pronto!
                 </p>
             </article>
-            <article>
+
+            <article class="about_skills">
                 <h3>Mis habilidades</h3>
-                
+                <div class="about_skills--list">
+                    <span id="HTML" title="HTML"></span>
+                    <span id="CSS" title="CSS"></span>
+                    <span id="JavaScript" title="JavaScript"></span>
+                    <span id="Git" title="Git"></span>
+                    <span id="Github" title="Github"></span>
+                    <span id="Sass" title="Sass" ></span>
+                    <span id="Webpack" title="Webpack"></span>
+                    <span id="React.js" title="React.js"></span>
+                </div>
             </article>
         </section>
-        <section id="#projects">
+        <section id="projects">
 
         </section>
     </main>
-    <footer id="#contact">
+    <footer id="contact">
         <section>
             <a href="www.linkedin.com/in/marcos-chinchilla-195050171"><img src="" alt=""></a>
             <a href="https://twitter.com/Marcos_Fraco"><img src="" alt=""></a>
