add mobile menu and fixed in the dark mode

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <header>
         <nav class="navBar">
             <h3 class="navBar_alias">MSCH13</h3>
+            <span class="menuMobile">
+                <svg xmlns="http://www.w3.org/2000/svg" height="48" width="48"><path d="M6 36v-3h36v3Zm0-10.5v-3h36v3ZM6 15v-3h36v3Z"/></svg>
+            </span>
             <ul class="navBar_items">
                 <a href="#home"><li>Home</li></a>
                 <a href="#about"><li>About</li></a>
@@ -131,7 +134,7 @@
                     </a>
                 </article>
     
-                <article class="projects_container--item" >
+                <!-- <article class="projects_container--item" >
                     <img src="./asset/images/portfolio.png"/>
                     <h3>
                         
@@ -168,7 +171,7 @@
                     <a>
                         Ir al repositorio
                     </a>
-                </article>
+                </article> -->
             </div>
         </section>
     </main>
