--- a/index.html
+++ b/index.html
@@ -31,9 +31,6 @@
                     <i class="fa-solid fa-moon dark_mode" style="color: #9CC76A; font-size: 25px; cursor: pointer;"></i>
 
                     <i class="fa-solid fa-sun light_mode inactive" style="color: #579B0F; font-size: 25px; cursor: pointer;"></i>
-                    <!-- <img src="./asset/icons/crescent-moon_icon-icons.com_70215.svg" class="dark_mode" type="image/svg+xml" width="20" height="20">
-                
-                    <img src="./asset/icons/sun-day-weather-symbol_icon-icons.com_73146.svg" class="light_mode inactive" type="image/svg+xml" width="20" height="20"> -->
                 </div>
             </div>
         </nav>
@@ -46,7 +43,7 @@
                 <h2 class="whoIam_description-greeting">Hola mundo!! Soy</h2>
                 <h1 >Marcos Chinchilla</h1>
                 <p class="whoIam_description-job">Desarrollador web Fullstack</p>
-                <a href="./asset/Marcos_Chinchilla.pdf" download>Descargar mi currículum</a>
+                <a href="./asset/Marcos_Chinchilla_FS.pdf" download>Descargar mi currículum</a>
             </div>
             <div class="whoIam_image">
                 <img src="./asset/images/msch.png"/>
@@ -59,7 +56,7 @@
             <article class="about_whoiam">
                 <h3>¿Quien soy?</h3>
                 <p>
-                    ¡Hola! Mi nombre es Marcos Chinchilla, pero me conocen en las redes sociales como "MSCH13". Soy un desarrollador frontend apasionado por crear software para la web y por todas las posibilidades que este campo nos ofrece. Me especializo en convertir tareas complejas en soluciones simples y efectivas, y me encanta utilizar mis habilidades para ayudar a las personas a simplificar sus estilos de vida y su trabajo.
+                    ¡Hola! Mi nombre es Marcos Chinchilla, pero me conocen en las redes sociales como "MSCH13". Soy un desarrollador web fullstack apasionado por crear software para la web, también me encantan todas las posibilidades que el desarrollo de software nos permite. Me especializo en convertir tareas complejas en soluciones simples y efectivas, y me encanta utilizar mis habilidades para ayudar a las personas a simplificar sus estilos de vida y su trabajo.
                     <br/>
                     Siempre estoy buscando nuevas oportunidades para seguir aprendiendo y creciendo como desarrollador, y me encantaría tener la oportunidad de trabajar contigo. ¡Gracias por visitar mi portafolio y espero tener la oportunidad de colaborar contigo pronto!
                 </p>
